unpackaged/main/default/objects/OpportunityLineItem/fields/Saas_Amount__c.field-meta.xml
<CustomField>
    <fullName>Saas_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saas Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>