unpackaged/main/default/objects/OpportunityLineItem/fields/Saas_Amount_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Saas_Amount_Calculated__c</fullName>
    <formula>IF(
SBQQ__QuoteLine__r.TECH_Subscription_Term_Formula__c &gt; 0,
IF(
SBQQ__QuoteLine__r.TECH_Subscription_Term_Formula__c &gt; 12,
SBQQ__QuoteLine__r.SBQQ__NetTotal__c * 12 / SBQQ__QuoteLine__r.TECH_Subscription_Term_Formula__c,
SBQQ__QuoteLine__r.SBQQ__NetTotal__c
),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saas Amount Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>