unpackaged/main/default/objects/OpportunityLineItem/fields/StructureLevel1__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel1__c</fullName>
    <description>Used to retrieve the line Product's 'StructureLevel1'</description>
    <label>StructureLevel1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel1</valueSetName>
    </valueSet>
</CustomField>