unpackaged/main/default/objects/OpportunityLineItem/fields/TECH_IsOppyPrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsOppyPrimaryQuote__c</fullName>
    <formula>Opportunity.SBQQ__PrimaryQuote__r.SBQQ__Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Is Oppy Primary Quote</label>
    <type>Checkbox</type>
</CustomField>