unpackaged/main/default/objects/OpportunityLineItem/fields/TechProfServicesWorkload__c.field-meta.xml
<CustomField>
    <fullName>TechProfServicesWorkload__c</fullName>
    <description>W-000834 - calculated via trigger SM009_CalcEstProjectWorkload based on related articles professional services</description>
    <label>Tech Prof Services Workload</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>